2007-12-11  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Include "front" in "set label" options.

	* plot/surface.m: Don't set facecolor property in call to
	__go_surface__.

	* plot/__plt2vs__.m, plot/__plt2sv__.m: New functions.
	* plot/__plt2__.m: Handle scalar-vector and vector-scalar cases.

2007-12-11  Kai Habel  <kai.habel@gmx.de>

	* plot/__patch__.m: Fix typo. Improve argument checking, so that a
	color string is not taken as z value.

	* plot/slice.m: Remove unused variable, set xgrid, ygrid, and
	zgrid to "on" and box to "off" for used axes.

	* plot/__go_draw_axes__.m, plot/plot3.m, plot/ribbon.m,
	plot/slice.m: Use size_equal(var1,var2,...) when possible.

2007-12-11  David Bateman  <dbateman@free.fr>

	* miscelleaneous/fullfile.m: Ignore empty arguments.

	* sparse/spstats.m: Drop argument to Fsparse to force mutation.
	* statistics/base/mode.m: Ditto.

	* plot/__plt_get_axis_arg__.m: Ignore integer valued handles as
	object handles are all now non integer.

2007-12-10  John W. Eaton  <jwe@octave.org>

	* plot/sombrero.m, plot/peaks.m: Use surf instead of mesh.

	* general/issymmetric.m: Use ' instead of .' for compatibility
	with previous versions of Octave.
	* general/ishermitian.m: Delete.
	* general/Makefile.in (SOURCES): Remove ishermitian.m from the list.

	* plot/fplot.m: In N is not specified, increase initial number of
	points from 3 and 5 to 5 and 8.

	* signal/detrend.m: Move tests here from test/test_signal.m.
	Loosen tolerance on first test from 10*eps to 20*eps.

	* finance/rate.m: Don't request info from fsolve.

2007-12-10  Michael Goffioul <michael.goffioul@gmail.com>

	* plot/__line__.m: Pass initial property/value pairs to __go_line__.
	* plot/surface.m: Pass initial property/value pairs to __go_surface__.

2007-12-10  David Bateman  <dbateman@free.fr>

	* image/image.m: Rewritten to allow trailing properties to be
	passed to underlying image object.
	* image/__img__.m: Pass additional arguments to __go_image__.